# mcpjs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ci.yml  index.d.ts  index.js  mcpify.test.js  mcpjs.darwin-arm64.node  mcpjs.test.js  package.json
examples/: http-server.js  weather-server.js
src/: lib.rs
